force-app/main/default/objects/ConnectionInfo__mdt/ConnectionInfo__mdt.object-meta.xml
<CustomObject>
    <label>ConnectionInfo</label>
    <pluralLabel>ConnectionInfos</pluralLabel>
</CustomObject>