force-app/main/default/objects/ConnectionInfo__mdt/fields/Package_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Client_Id__c</fullName>
    <label>Package Client Id</label>
    <length>90</length>
    <type>Text</type>
</CustomField>