force-app/main/default/objects/ConnectionInfo__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>32</length>
    <type>Text</type>
</CustomField>